--- a/salty-hackers/src/components/SaltSelectors/selectorStyles.css
+++ b/salty-hackers/src/components/SaltSelectors/selectorStyles.css
@@ -5,6 +5,12 @@
 
 
 .active div {
-    background: #ffceae;
+    
+    background-image: linear-gradient(0deg, #fcc5a1, #f8dac5);
     color: #753b15;
+}
+
+.colored {
+    color: #f8dac5;
+    
 }
